<resources>
    <string name="app_name">Salah Time</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="GPSAlertDialogTitle">GPS</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locationHeading">Your Current Location</string>
    <string name="service_not_available">Service Not Available on Your Device</string>
    <string name="invalid_lat_long_used">Invalid latitude and longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="location">Location: </string>
    // of Fajr, Sunrise,
    // Dhuhr, Asr, Sunset,
    // Maghrib, Isha
    <string name="salahtimetabletitle">Salah Time</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="sehr">Sehr</string>
    <string name="iftar">Iftar</string>
    <string name="timezone_api_key">AIzaSyBcKEvJuXRuOOdjce8b-HcdzJ1XnOVm9Hc</string>
    <string name="place_api_key">AIzaSyCuL0bzpwWUgxAtM91VSQFHTlpdVSDzXFo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="share">Share Timing</string>

    <!--About-->
    <string name="author_name">Mohsin Bagwan</string>
    <string name="contact_no">+919096553348</string>
    <string name="email">mosin.bagban@gmail.com</string>
    <string name="address">Pune, India</string>
    <string name="powerby">powered by: Salah Time</string>

    <!--Ramzan-->
    <string name="saher_msg">Saheri Time</string>
    <string name="iftar_msg">Iftar Time</string>
    <string name="ramzan">Ramzan : </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!--Salah Preferences-->

    <!--Calculation method-->
    <string name="pref_header_salah">Salah</string>
    <string name="pref_title_salah_calculation_methods">Select calculation method</string>
    <string-array name="pref_calculation_methods_titles">
        <item>Ithna Ashari</item>
        <item>University of Islamic Sciences, Karachi</item>
        <item>Islamic Society of North America (ISNA)</item>
        <item>Muslim World League (MWL)</item>
        <item>Umm al-Qura, Makkah</item>
        <item>Egyptian General Authority of Survey</item>
        <item>Institute of Geophysics, University of Tehran</item>
    </string-array>
    <string-array name="pref_calculation_methods_values">
        <item>Jafari</item>
        <item>Karachi</item>
        <item>ISNA</item>
        <item>MWL</item>
        <item>Makkah</item>
        <item>Egypt</item>
        <item>Tehran</item>
    </string-array>

    <!--Juristic Methods-->
    <string name="pref_title_juristic_methods">Asr calculation - Juristic Methods</string>
    <string-array name="pref_juristic_methods_titles">
        <item>Shafii, Maliki, Hanbali (standard)</item>
        <item>Hanafi</item>
    </string-array>
    <string-array name="pref_juristic_methods_values">
        <item>Shafii</item>
        <item>Hanafi</item>
    </string-array>

    <!--Adjusting Methods for Higher Latitudes-->
    <string name="pref_title_adjustment_methods">Adjustment for Higher Latitudes</string>
    <string-array name="pref_adjustment_methods_titles">
        <item>No adjustment</item>
        <item>Middle of night</item>
        <item>1/7th of night</item>
        <item>Angle/60th of night</item>
    </string-array>
    <string-array name="pref_adjustment_methods_values">
        <item>None</item>
        <item>MidNight</item>
        <item>OneSeventh</item>
        <item>AngleBased</item>
    </string-array>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Show Salah notifications</string>
    <string name="pref_default_notification">Default</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- - Qibla Activity - -->
    <string name="latitude_north">N</string>
    <string name="latitude_south">S</string>
    <string name="longitude_east">E</string>
    <string name="longitude_west">W</string>
    <string name="no_location_yet">Please wait. Detecting your location...\nOr you can select your city in the Settings.</string>
    <string name="default_location_text">Direction of Qibla \nin %s</string>
    <string name="geo_location_info">We got the Qibla direction.</string>

    <string name="gps_status">Use GPS</string>
    <string name="gps_status_summary">Enables using GPS for getting your location.</string>

    <string name="gps_prompt">Use GPS</string>
    <string name="gps_summary">Enables using GPS for getting your location.</string>

    <string name="state_location_title">Set your location manually</string>
    <string name="state_location_summary">Select one of province capitals of Iran if you are near them.</string>

    <string name="about_text"><br/>
	If you don\'t know the direction of Qibla in your current location, just use this application.
	<br/><br/>
    All rights reserved by <font fgcolor="#ffffffff"><b>Iranian Congenial Mobile Co.</b></font>. The direction of the Qibla is computed using GPS and the direction of the north reported by the compass.
   <br/><br/>
    Visit <font fgcolor="#ff749c00"><a fgcolor="749C00FF" href="http://farsitel.com/fa/">http://farsitel.com/</a></font> to learn more about
   <font fgcolor="#ffffffff"><b>FarsiTel</b></font>.
   <br/><br/>
   </string>

    <string name="screen_down_text">Please hold your phone horizontally and toward upside so that it\'s compass could work. Can\'t determine the direction of the north accurately now.</string>


    <string name="settings_label">Settings</string>
    <string name="prefs_menu_title">Settings</string>
    <string name="about_menu_title">About</string>

    <!-- Do not translate next two tag, it's used by program for other reasons -->
    <string name="gps_pref_key">GPS_LOCATION_PREF</string>
    <string name="state_location_pref_key">state_LOCATION_PREF</string>
    <string name="title_activity_user_preferences">UserPreferencesActivity</string>
    <string name="my_pref_key">com.zainsoft.ramzantimetable.SALAH_PREFERENCE_KEY</string>
    <string name="title_activity_qibla">Qibla Direction</string>
    <string name="title_activity_salah_calender">Salah Calender</string>
</resources>
