<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/bgframe"
    tools:context="com.zainsoft.ramzantimetable.RamzanActivity">

    <TextView
        android:id="@+id/textSaherMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRamzanNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/saher_msg"
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textSaher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSaherMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text=""
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textIftarMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSaher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/iftar_msg"
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textIftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textIftarMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text=""
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textRamzanNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textRamzanMsg"
        android:layout_alignBottom="@+id/textRamzanMsg"
        android:layout_alignLeft="@+id/textSaherMsg"
        android:text=""
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textRamzanMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="10dp"
        android:text="@string/ramzan"
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textRamzanDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textRamzanMsg"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text=""
        android:textColor="#007396"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textSahIftarMsg"
        android:layout_below="@+id/textIftar"
        android:layout_alignEnd="@+id/textSaherMsg"/>

</RelativeLayout>
