<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zainsoft.ramzantimetable.LocationDetailFragment"

    android:background="@android:color/holo_green_light">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationHeading"
        android:gravity="center|top"
        style="@style/MyTextStyle"
        android:textStyle="bold"
        />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Latitude:"
                    android:layout_weight=".3"
                    style="@style/MyTextStyle"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/txtLat"
                    android:layout_weight=".7"

                    style="@style/MyTextStyle"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Longitude:"
                    android:layout_weight=".3"
                    style="@style/MyTextStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/txtLong"
                    android:layout_weight=".7"
                    style="@style/MyTextStyle" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City:"
                    android:layout_weight=".2"
                    style="@style/MyTextStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not set"
                    android:id="@+id/txtCity"
                    android:layout_weight=".6"
                    style="@style/MyTextStyle"/>
                <Button
                    android:id="@+id/btnLocateMe"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@android:drawable/ic_menu_mylocation"
                    android:layout_marginRight="10dp"
                    />
            </TableRow>

        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salah Start Time"
            style="@style/MyTextStyle"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/txtSalahT"
            android:background="@android:color/holo_orange_dark"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Salah Time"
                style="@style/MyTextStyle"
                android:gravity="left"
                android:visibility="gone"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtFajrTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    android:gravity="left"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnFajrAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dhuhr"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtDhuhrTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    android:gravity="left"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnDhuhrAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/asr"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtAsrTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnAsrAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrib"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtMaghribTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnMaghribAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/isha"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtIshaTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnIshaAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtSunriseTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnSunriseAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"
                    />
                <TextView
                    android:id="@+id/txtSunsetTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyTextStyle"
                    android:layout_weight="0.4"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnSunsetAlarm"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@android:drawable/ic_popup_reminder"
                        android:layout_marginRight="25dip"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/salahTimeListView" />

    </LinearLayout>
</FrameLayout>
